--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,7 @@
     <string name="lbl_forget_password" />
     <string name="btn_reset_password" />
     <string name="doctorname">DoctorName</string>
+    <string name="PhoneNumber">Contact no</string>
+    <string name="channel_name">albus</string>
+    <string name="channel_description">" percival wulfric brian dumbledore"</string>
 </resources>
